2002-04-01  Han-Wen  <hanwen@cs.uu.nl>

	* lily/tuplet-bracket.cc (make_bracket): new function
	(get_x_offset): new function; make tuplet brackets align on stems
	if stem has same direction.
	(parallel_beam): be anal about matching bracket to tuplet.

	* lily/lookup.cc (line): new function Lookup::line(). 

	* scm/tex.scm (dashed-line): change -line to -system in names.

	* lily/box.cc (add_point): new function.

	* flower/include/interval.hh: new function add_point ().
	new function widen()
	
2002-04-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* .cvsignore: Ignore all kinds of lilypond input and output.

	* lily/beam.cc (ADD_INTERFACE): Add concaveness-gap.

2002-04-01  Han-Wen  <hanwen@cs.uu.nl>

	* lily/staff-symbol.cc (brew_molecule): make line thickness
	adjustable.

	* lily/*.cc: replace stafflinethickness by linethickness.

2002-04-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/regression/beam-concave.ly: Add to-be-considered-concave
	beam.

	* lily/beam.cc (check_concave): Add check for large gap between an
	inner notehead and the line through outer noteheads.

	* scm/grob-description.scm (Beam): Add concaveness-gap, default
	value 2.0 staff-space.
	
	* scm/grob-property-description.scm (concaveness-gap): Add
	description.

	* input/mozart-hrn3-allegro.ly: Fix typo.

2002-03-31  Juergen Reuter  <reuter@ipd.uka.de>

	* scm/ps.scm, ps/music-drawing-routines.ps, lily/lookup.cc,
	lily/note-head-engraver: improved implementation of roundfilledbox
	(according to Han-Wen's request)

	* lily/include/spacing-spanner.hh, lily/spacing-spanner.cc,
	lily/gourlay-breaking.cc, lily/staff-symbol.cc,
	lily/simple-spacer.cc: ragged-right alignment

2002-03-29  Han-Wen  <hanwen@cs.uu.nl>

	* input/regression/spacing-note-flags.ly: new file

	* input/regression/spacing-rest.ly: new file

	* mf/feta-eindelijk.mf: make bbox of quarter rest tighter.

	* lily/spacing-spanner.cc (note_spacing): make note spacing after