@@ -18,7 +18,12 @@ direction as the
 \score{
 	\notes \context Voice \relative c'' {
 		 \times 2/3 { \times 2/3 { a8 b c}  c }
-		 \times 3/4 { c4 c4 c4 c4 }
+		 \times 2/3 { r8 [b f] }
+		 \times 2/3 { r8 b r8 }
+		 c4 |
+		 
+		 \times 3/4 { c4 c4 c4 c4 } c4 | 
+		 
 		 \time 6/8
 		 \times 6/9 { c8 c c c c c c c c }
 
